<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.anshumantripathi.mathquizapp.QuizActivity">


    <TextView
        android:text="@string/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/numText2"
        android:layout_toStartOf="@+id/numText2"
        android:layout_marginEnd="14dp"
        android:id="@+id/operation"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/numText1"
        android:layout_alignParentStart="true"
        android:id="@+id/qNumber"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/timeText"
        android:layout_toEndOf="@+id/timeText"
        android:layout_marginStart="10dp"
        android:id="@+id/timer"
        android:textSize="20sp"/>

    <TextView
        android:text="@string/defaultNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numText2"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/numText1"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>

    <TextView
        android:text="@string/defaultNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numText1"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/operation"
        android:textSize="20sp"/>

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/quizToolbar"
        android:contentInsetLeft="0dp"
        android:contentInsetRight="0dp"
        android:layout_above="@+id/qNumber"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <View
        android:id="@+id/line"
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/operation"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeText"
        android:text="@string/timeLeft"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/answer"
        android:layout_alignParentStart="true"
        android:textSize="20sp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/num1"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:elevation="24dp"
                android:text="@string/one"
                android:tag="@string/one"
                android:textColor="@android:color/background_light"
                android:onClick="setValue"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/num2"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:elevation="24dp"
                android:text="@string/two"
                android:tag="@string/two"
                android:textColor="@android:color/background_light"
                android:onClick="setValue"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/num3"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:elevation="24dp"
                android:text="@string/three"
                android:tag="@string/three"
                android:textColor="@android:color/background_light"
                android:onClick="setValue"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/num4"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:elevation="24dp"
                android:text="@string/four"
                android:tag="@string/four"
                android:textColor="@android:color/background_light"
                android:onClick="setValue"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/num5"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:elevation="24dp"
                android:text="@string/five"
                android:tag="@string/five"
                android:textColor="@android:color/background_light"
                android:onClick="setValue"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/num6"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:elevation="24dp"
                android:text="@string/six"
                android:tag="@string/six"
                android:textColor="@android:color/background_light"
                android:onClick="setValue"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/num7"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:elevation="24dp"
                android:text="@string/seven"
                android:tag="@string/seven"
                android:textColor="@android:color/background_light"
                android:onClick="setValue"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/num8"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:elevation="24dp"
                android:text="@string/eight"
                android:tag="@string/eight"
                android:textColor="@android:color/background_light"
                android:onClick="setValue"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/num9"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:elevation="24dp"
                android:text="@string/nine"
                android:tag="@string/nine"
                android:textColor="@android:color/background_light"
                android:onClick="setValue"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:elevation="24dp"
                android:text="@string/clear"
                android:tag="clear"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/num0"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:elevation="24dp"
                android:text="@string/defaultNum"
                android:tag="@string/defaultNum"
                android:textColor="@android:color/background_light"
                android:onClick="setValue"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/enter"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:elevation="24dp"
                android:text="@string/submit"
                android:tag="enter"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"/>

        </LinearLayout>
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/answer"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_below="@id/line"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
